--- a/bbk.html
+++ b/bbk.html
@@ -16,11 +16,11 @@
   height: 100vh;
 }
 </style>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/markmap-toolbar@0.15.6/dist/style.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/markmap-toolbar@0.17.0/dist/style.css">
 </head>
 <body>
 <svg id="mindmap"></svg>
-<script src="https://cdn.jsdelivr.net/npm/d3@7.8.5/dist/d3.min.js"></script><script src="https://cdn.jsdelivr.net/npm/markmap-view@0.15.6/dist/browser/index.js"></script><script src="https://cdn.jsdelivr.net/npm/markmap-toolbar@0.15.6/dist/index.js"></script><script>(r => {
+<script src="https://cdn.jsdelivr.net/npm/d3@7.8.5/dist/d3.min.js"></script><script src="https://cdn.jsdelivr.net/npm/markmap-view@0.17.0/dist/browser/index.js"></script><script src="https://cdn.jsdelivr.net/npm/markmap-toolbar@0.17.0/dist/index.js"></script><script>(r => {
                 setTimeout(r);
               })(() => {
   const {
@@ -33,12 +33,12 @@
   el.setAttribute('style', 'position:absolute;bottom:20px;right:20px');
   document.body.append(el);
 })</script><script>((getMarkmap, getOptions, root2, jsonOptions) => {
-                const markmap = getMarkmap();
-                window.mm = markmap.Markmap.create(
-                  "svg#mindmap",
-                  (getOptions || markmap.deriveOptions)(jsonOptions),
-                  root2
-                );
-              })(() => window.markmap,null,{"type":"heading","depth":0,"payload":{"lines":[1,2]},"content":"BBK","children":[{"type":"heading","depth":1,"payload":{"lines":[2,3]},"content":"Tag 1","children":[{"type":"list_item","depth":2,"payload":{"lines":[3,4]},"content":"<a href=\"https://tools.fobizz.com/teaching_board/public_screens/0550e273-377b-41ab-833f-13028afb1bef?token=b6a14282cc8ddf9f334edfb1332b7dec\">Intro</a>","children":[]},{"type":"list_item","depth":2,"payload":{"lines":[4,5]},"content":"<a href=\"https://tools.fobizz.com/teaching_board/public_screens/22d8cefb-88ff-4fb8-b977-68c79ee07735?token=f4bad4d303e01c1152b49944940ad71f\">Jugendlichen im Alltag I</a>","children":[]},{"type":"list_item","depth":2,"payload":{"lines":[5,6]},"content":"<a href=\"https://tools.fobizz.com/teaching_board/public_screens/cc2424aa-90ef-4b56-a65e-92e62a6a84f4?token=280345e87a207a2c38f92cf71392167a\">Der Gute Lernende</a>","children":[]},{"type":"list_item","depth":2,"payload":{"lines":[6,7]},"content":"<a href=\"https://tools.fobizz.com/teaching_board/public_screens/ce61f3f4-76fc-488d-b5d2-847ff231d04e?token=020487d0d9019700110b296ea96663e2\">Entwicklungspsychologie</a>","children":[]},{"type":"list_item","depth":2,"payload":{"lines":[7,8]},"content":"<a href=\"https://tools.fobizz.com/teaching_board/public_screens/118668b5-3595-4ed2-9ab4-5eece201ea41?token=702bb84f5f0e4609989035d2121fe31b\">Jugendlichen im Alltag II</a>","children":[]},{"type":"list_item","depth":2,"payload":{"lines":[8,9]},"content":"<a href=\"https://tools.fobizz.com/teaching_board/public_screens/7f3a26df-0a53-4dab-a5c8-0d2e120d92e4?token=8ee02b2d2b8da7030caf474a7bd6a576\">Berufsbildungssystem</a>","children":[]}]},{"type":"heading","depth":1,"payload":{"lines":[10,11]},"content":"Tag 2","children":[]},{"type":"heading","depth":1,"payload":{"lines":[12,13]},"content":"Tag 3","children":[]},{"type":"heading","depth":1,"payload":{"lines":[14,15]},"content":"Tag 4","children":[]},{"type":"heading","depth":1,"payload":{"lines":[16,17]},"content":"Asynchroner Tag","children":[{"type":"list_item","depth":2,"payload":{"lines":[17,18]},"content":"<a href=\"https://tools.fobizz.com/teaching_board/public_screens/746819a7-6a78-40b5-9959-00b469fa152f?token=1647304c9d306d4cd6f0ea82005fc510\">Aufträge</a>","children":[]},{"type":"list_item","depth":2,"payload":{"lines":[18,19]},"content":"<a href=\"http://aburossi.ch/bbkmappe\">Dokumentenmappe</a>","children":[]}]}]},{"colorFreezeLevel":2,"maxWidth":300,"initialExpandLevel":2})</script>
+              const markmap = getMarkmap();
+              window.mm = markmap.Markmap.create(
+                "svg#mindmap",
+                (getOptions || markmap.deriveOptions)(jsonOptions),
+                root2
+              );
+            })(() => window.markmap,null,{"content":"BBK","children":[{"content":"<a href=\"https://miro.com/app/board/uXjVKJ3WzE0=/?share_link_id=86501616930\">Tag 1</a>","children":[],"payload":{"lines":"2,3"}},{"content":"Tag 2","children":[],"payload":{"lines":"4,5"}},{"content":"Tag 3","children":[],"payload":{"lines":"6,7"}},{"content":"Tag 4","children":[],"payload":{"lines":"8,9"}},{"content":"Asynchroner Tag","children":[{"content":"<a href=\"http://aburossi.ch/bbkmappe\">Dokumentenmappe</a>","children":[],"payload":{"lines":"11,12"}}],"payload":{"lines":"10,11"}}],"payload":{"lines":"1,2"}},{"colorFreezeLevel":2,"maxWidth":300,"initialExpandLevel":2})</script>
 </body>
 </html>
